--- a/APPLI/ASSESSMENT/NEW/HTML/TABLE.HTML
+++ b/APPLI/ASSESSMENT/NEW/HTML/TABLE.HTML
@@ -1,25 +1,24 @@
-
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 
-
+<!--Operation List-->
 <table class="table">
     <thead>
         <tr>
             <th>#</th>
-            <th>PARTS NO</th>
-            <th>CATEGORY</th>
-            <th>PARTS NAME</th>
+            <th>作業カテゴリ</th>
+            <th>作業リスト</th>
+            <th>工数</th>
             <th>PRICE</th>
             <th></th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        <!--登録済パーツの表示-->
+        <!--追加した作業の表示-->
         ###TABLE_RECORDS###
 
-        <!--パーツ新規追加-->
+        <!--作業の新規追加-->
         <tr>
             <td>--</td>
             <td>
@@ -28,7 +27,7 @@
             <td>
                 <div class="form-group">
                     <div class="btn-group">
-                        <button type="button" class="btn dropdown-toggle" id="new_parts_categogy" data-toggle="dropdown" aria-expended="false">
+                        <button type="button" class="btn dropdown-toggle" id="ope_categogy" data-toggle="dropdown" aria-expended="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" name="NEW">
