--- a/APPLI/PARTS_CATEGORY/LISTS/HTML/SHOW.HTML
+++ b/APPLI/PARTS_CATEGORY/LISTS/HTML/SHOW.HTML
@@ -1,41 +1,40 @@
-<!--PARTS CATEGORY Contents-->
-    
-    <div class="col-md-9">
+<!--<!DOCTYPE html>-->
+<!--<html>-->
 
-         <!--Contents Header Title-->
-        <div class="container" style="margin-bottom:15px;">
-            <div class="row">
-                <h1 class="">
-                    <p>Parts Category</p>
-                </h1>
+<div class="container">
+    
+    <div class="fixed">
+
+        <!--Header Info-->
+        <div class="row">
+            <label class="control-label col-sm-1">
+                <h3><i class="glyphicon glyphicon-info-sign"></i></h3>
+            </label>
+            <div class="col-sm-6 lbl-header-info">
+                <span id="info-msg" class="label label-lg label-###INFO_LV###">
+                    ###INFO_MSG###
+                </span>
             </div>
         </div>
 
-        <!--Contents Header Information-->
-        <div class="container" style="margin-bottom:15px;">
-            <form class="form-horizontal header-info">
-                <div class="form-group">
-                    <h3>
-                        <label class="control-label col-sm-1" for="">
-                            <i class="glyphicon glyphicon-info-sign"></i>
-                        </label>
-                    </h3>
-                    <h4>
-                        <div class="col-sm-5" style="text-align:left;">
-                            <p><span id="info-msg" class="label label-lg label-###INFO_LV###">###INFO_MSG###</span></p>
-                        </div>
-                    </h4>
-                </div>
-            </form>
-        </div>
+        <!--Search-->
+        <!--
 
-        <!--Contents-->
-        <div class="container" style="padding;20px;">
-            <form class="form-horizontal" style="margin-bottom:15px;" action="/APP/PARTS_CATEGORY/LISTS/SHOW" method="GET">
-###TABLE###
-            </form>
-        </div>
+        -->
     </div>
+
+    <!--Spacer-->
+    <div class="header-dummy" style="height:7.0em; background-color:piiiiink;"></div>
+
+    <!--Contents-->
+    <div class="header-under-contents">
+        <form class="form-horizontal" action="/APP/PARTS_CATEGORY/LISTS/SHOW" method="GET">
+            <div class="contents-table">
+                ###TABLE###
+            </div>
+        </form>
+    </div>
+</div>
 <!--</html>-->
 
 <script>
@@ -110,3 +109,4 @@
     }
 
 </script>
+<!--</html>-->
