--- a/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/SHOW.HTML
@@ -3,7 +3,7 @@
 
 <div class="container">
     
-    <div class="fixed">
+    <div class="fixed gray-trans-over" style="padding:10px;">
 
         <!--Header Info-->
         <div class="row">
@@ -23,34 +23,34 @@
 
                 <!--Parts Category Dropdown list-->
                 <div class="btn-group">
-                <div class="btn-group">
-                    <div class="col-sm-2">
-                        <div class="btn-group">
-                            <button type="submit" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="parts_category" aria-expended="false">
-                                &nbsp<span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu" name="PAGE">
-                               <li name="CATEGORY_PAGE">
-                                   <a id="cat-list-0" onclick="categoryChoice(0,this); return false;" >ALL</a>
-                               </li>
-                               ###CATEGORY###
-                            </ul>
+                    <div class="btn-group">
+                        <div class="col-sm-2">
+                            <div class="btn-group">
+                                <button type="submit" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="parts_category" aria-expended="false">
+                                    &nbsp<span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" role="menu" name="PAGE">
+                                   <li name="CATEGORY_PAGE">
+                                       <a id="cat-list-0" onclick="categoryChoice(0,this); return false;" >ALL</a>
+                                   </li>
+                                   ###CATEGORY###
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-sm-10">
+                            <input type="text" name="CATEGORY_PAGE" id="CATEGORY_PAGE" value="###CATEGORY_PAGE_HIDDEN###" class="form-control" disabled />
+                            <input type="hidden" name="CATEGORY_PAGE_HIDDEN" id="CATEGORY_PAGE_HIDDEN" value="###CATEGORY_PAGE_HIDDEN###" class="form-control" />
+                            <input type="hidden" name="SEARCH" id="SEARCH" value="1" class="form-control" />
+                            <input type="hidden" name="page" id="page" value="1" class="form-control" />
                         </div>
                     </div>
-                    <div class="col-sm-10">
-                        <input type="text" name="CATEGORY_PAGE" id="CATEGORY_PAGE" value="###CATEGORY_PAGE_HIDDEN###" class="form-control" disabled />
-                        <input type="hidden" name="CATEGORY_PAGE_HIDDEN" id="CATEGORY_PAGE_HIDDEN" value="###CATEGORY_PAGE_HIDDEN###" class="form-control" />
-                        <input type="hidden" name="SEARCH" id="SEARCH" value="1" class="form-control" />
-                        <input type="hidden" name="page" id="page" value="1" class="form-control" />
-                    </div>
-                </div>
 
-                <!--Search Submit button-->
-                <div class="col-sm-3">
-                    <button type="submit" class="btn btn-primary" />
-                        <span clss="glyphicon glyphicon-eye-open">Search</span>
-                    </button>
-                </div>
+                    <!--Search Submit button-->
+                    <div class="col-sm-3">
+                        <button type="submit" class="btn btn-primary" />
+                            <span clss="glyphicon glyphicon-eye-open">Search</span>
+                        </button>
+                    </div>
                 </div>
 
                 <!--Spacer-->
@@ -60,7 +60,7 @@
     </div>
 
     <!--Spacer-->
-    <div class="header-dummy" style="height:7.0em; background-color:piiiiink;"></div>
+    <div class="header-dummy" style="height:8.0em; background-color:pink;"></div>
 
     <!--Contents Records/Pagination-->
     <div class="header-under-contents">
