--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -16,10 +16,7 @@
                 <div class="dropdown" style="" >
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-user"> スタッフ&nbsp</i><span class="caret"></span>
-                        <span style="font-color:blue;">
-                        &nbsp&nbsp&nbsp&nbsp
-                        &nbsp&nbsp&nbsp&nbsp
-                        </span>
+                        <span style="font-color:blue;"></span>
                     </a>
                     <ul class="dropdown-menu">
     			       <a href="/APP/STUFF/NEW/INPUT">
@@ -30,9 +27,20 @@
                        </a>
                     </ul>
                 </div>
-    			<a href="/APP/ASSESSMENT/LISTS/SHOW">
-                    <i class="glyphicon glyphicon-eye-open"> 査定</i>
-                </a>
+                <div class="dropdown" style="" >
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="glyphicon glyphicon-user"> 査定&nbsp</i><span class="caret"></span>
+                        <span style="font-color:blue;"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+    			        <a href="/APP/ASSESSMENT/NEW/INPUT">
+                            <i class="glyphicon glyphicon-edit"> 新規登録</i>
+                        </a>
+                        <a href="/APP/ASSESSMENT/LISTS/SHOW">
+                            <i class="glyphicon glyphicon-eye-open"> 一覧</i>
+                       </a>
+                    </ul>
+                </div>
     			<a href="/APP/ACCEPT/LISTS/SHOW">
                     <i class="glyphicon glyphicon-thumbs-up"> 受入</i>
                 </a>
@@ -51,12 +59,7 @@
                <div class="dropdown" style="" >
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-wrench"> マスタ&nbsp</i><span class="caret"></span>
-                        <span style="font-color:blue;">
-                        &nbsp&nbsp&nbsp&nbsp
-                        &nbsp&nbsp&nbsp&nbsp
-                        &nbsp&nbsp&nbsp&nbsp
-                        &nbsp&nbsp&nbsp&nbsp
-                        </span>
+                        <span style="font-color:blue;"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <a href="">
