--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -7,12 +7,14 @@
             <div class="scrollable-menu">
                 <h3></h3>
                 <h3>Menu</h3>
+
   			    <a class="###SIGNIN_HIDDEN###" href="/APP/STUFF/SIGNIN/INPUT">
                     <i class="glyphicon glyphicon-log-in"> サインイン</i>
                 </a>
     			<a class="###SIGNOUT_HIDDEN###" href="/APP/STUFF/SIGNIN/OUT">
                     <i class="glyphicon glyphicon-log-out"> サインアウト</i>
                 </a>
+
                 <div class="dropdown" style="" >
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-user"> スタッフ&nbsp</i><span class="caret"></span>
@@ -27,6 +29,7 @@
                        </a>
                     </ul>
                 </div>
+
                 <div class="dropdown" style="" >
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-user"> 査定&nbsp</i><span class="caret"></span>
@@ -41,21 +44,38 @@
                        </a>
                     </ul>
                 </div>
+
     			<a href="/APP/ACCEPT/LISTS/SHOW">
                     <i class="glyphicon glyphicon-thumbs-up"> 受入</i>
                 </a>
+
     			<a href="/APP/STOCK/LISTS/SHOW">
                     <i class="glyphicon glyphicon-th"> 在庫</i>
                 </a>
+
     			<a href="/APP/SALES/LISTS/SHOW">
                     <i class="glyphicon glyphicon-stats"> 売上</i>
                 </a>
-    			<a href="/APP/CUSTOMER/LISTS/SHOW">
-                    <i class="glyphicon glyphicon-book"> 顧客</i>
-                </a>
+
+                <div class="dropdown" style="" >
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="glyphicon glyphicon-book"> 顧客&nbsp</i><span class="caret"></span>
+                        <span style="font-color:blue;"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+    			        <a href="/APP/CUSTOMER/NEW/INPUT">
+                            <i class="glyphicon glyphicon-edit"> 新規登録</i>
+                        </a>
+                        <a href="/APP/CUSTOMER/LISTS/SHOW">
+                            <i class="glyphicon glyphicon-eye-open"> 一覧</i>
+                       </a>
+                    </ul>
+                </div>
+
     			<a href="#">
                     <i class="glyphicon glyphicon-wrench"> JOB</i>
                 </a>
+
                <div class="dropdown" style="" >
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-wrench"> マスタ&nbsp</i><span class="caret"></span>
