Customer add Phone

--- a/APPLI/CUSTOMER/NEW/HTML/COMPLETE.HTML
+++ b/APPLI/CUSTOMER/NEW/HTML/COMPLETE.HTML
@@ -27,7 +27,7 @@
                 </label>
             </div>
             <div class="col-md-10 col-xs-11">
-                <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+                <span class="text-info h3">###FIRST_NAME_LABEL###</span>
             </div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
@@ -56,6 +56,19 @@
 	        </div>
         </div>
 	    <br />
+
+	    <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-phone-alt"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+	            <span class="text-info h3">###PHONE_LABEL###</span>
+	        </div>
+        </div>
+	    <br />
+
     </div>
 </div>
 <!--body-->
