--- a/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/CUSTOMER/EDIT/HTML/CONFIRM.HTML
@@ -30,10 +30,10 @@
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
-                    <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+                    <span class="text-info h3">###FIRST_NAME_LABEL###</span>
                 </div>
                 <div class="col-md-1 col-xs-1"></div>
-	            <input type="hidden" name="FAMILY_NAME" value="###FAMILY_NAME_VALUE###" />
+	            <input type="hidden" name="FIRST_NAME" value="###FIRST_NAME_VALUE###" />
             </div>
 	        <br />
 
@@ -66,7 +66,20 @@
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
-                        <i class="glyphicon glyphicon-edit"></i>
+                        <i class="glyphicon glyphicon-phone-alt"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+	                <span class="text-info h3">###PHONE_LABEL###</span>
+                </div>
+                <input type="hidden" name="PHONE" value="###PHONE_VALUE###" />
+            </div>
+	        <br />
+
+            <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-lock"></i>
                     </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
@@ -81,11 +94,14 @@
 
             <div class="row">
                 <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-record"></i>
+                    </label>
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
 	                    <button type="submit" class="btn btn-primary btn-md" />
-	                        <span class="glyphicon glyphicon-plus">OK</span>
+                            Complete
                         </button>
                     </div>
                 </div>
