--- a/APPLI/CUSTOMER/DELETE/HTML/COMPLETE.HTML
+++ b/APPLI/CUSTOMER/DELETE/HTML/COMPLETE.HTML
@@ -13,7 +13,7 @@
             </div>
             <div class="col-md-10 lbl-header-info">
                 <span class="text-danger h4 lbl-header-info">
-                このスタッフを削除しました。
+                このお客様情報を削除しました。
                 </span>
             </div>
         </div>
@@ -40,7 +40,7 @@
                 </label>
             </div>
             <div class="col-md-10 col-xs-11">
-                <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+                <span class="text-info h3">###FIRST_NAME_LABEL###</span>
             </div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
@@ -68,6 +68,18 @@
 	            <span class="text-info h3">###EMAIL_LABEL###</span>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-phone-alt"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+                <span class="text-info h3">###PHONE_LABEL###</span>
+            </div>
+        </div>
+ 
     </div>
 </div>
 <!--</body>-->
