--- a/APPLI/CUSTOMER/LISTS/HTML/SHOW.HTML
+++ b/APPLI/CUSTOMER/LISTS/HTML/SHOW.HTML
@@ -31,9 +31,9 @@
                         <thead>
                             <tr>
                                 <th class="col-xs-1 col-ms-1 col-md-1 col-lg-1">NO</th>
-                                <th class="cpl-xs-2 col-md-3">FIRST NAME</th>
-                                <th class="cpl-xs-2 col-md-3">GIVEN NAME</th>
+                                <th class="cpl-xs-2 col-md-3">NAME</th>
                                 <th class="cpl-xs-2 col-md-4">ID(e-mail)</th>
+                                <th class="cpl-xs-2 col-md-3">Phone</th>
                                 <th class="col-xs-2 col-md-2">EDIT</th>
                                 <th class="col-xs-2 col-md-2">DELETE</th>
                             </tr>
@@ -44,9 +44,9 @@
                                 <td>
                                     <a class="btn-link" href="%11">%2</a>
                                 </td>
-                                <td>%3</td>
-                                <td>%4</td>
+                                <td>%3 %4</td>
                                 <td>%5</td>
+                                <td>%6</td>
                                 <td>
                                     <a class="btn btn-default" href="%12">EDIT</a>
                                 </td>
