--- a/APPLI/CUSTOMER/SEARCH/HTML/LISTBOX.HTML
+++ b/APPLI/CUSTOMER/SEARCH/HTML/LISTBOX.HTML
@@ -3,7 +3,7 @@
 <select id="customer-search-result" size="5">
     <option value="Guest">Guest</option>
 <!--RECORDS-->
-    <option value="%1">%2 %3</option>
+    <option value="%1">%2 %3 %4</option>
 <!--RECORDS-->
 </select>
 
