--- a/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
@@ -1,16 +1,17 @@
-
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 
 
-<table class="table">
+<table class="table" style="font-size:12px;">
     <thead>
         <tr>
             <th>#</th>
-            <th>PARTS NO</th>
-            <th>CATEGORY</th>
-            <th>PARTS NAME</th>
+            <th>NO</th>
+            <th>PARTS CATEGORY</th>
+            <th>PARTS NAME (EN)</th>
+            <th>PARTS NAME (JP)</th>
             <th>PRICE</th>
+            <th>REMARKS</th>
             <th></th>
             <th></th>
         </tr>
@@ -28,25 +29,36 @@
             <td>
                 <div class="form-group">
                     <div class="btn-group">
-                        <button type="button" class="btn dropdown-toggle" id="new_parts_categogy" data-toggle="dropdown" aria-expended="false">
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" name="NEW">
-                            ###CATEGORY###
-                        </ul>
+                        <div class="btn-group">
+                            <button type="button" class="btn dropdown-toggle input-sm" id="new_parts_categogy" data-toggle="dropdown" aria-expended="false">
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" name="NEW">
+                                ###CATEGORY###
+                            </ul>
+                        </div>
+                        <div class="btn-group">
+                            <input type="text" name="CATEGORY_NEW" id="CATEGORY_NEW" value="" class="form-control input-sm" disabled placeholder="部品カテゴリ"/>
+                        </div>
                     </div>
-                    <input type="text" name="CATEGORY_NEW" id="CATEGORY_NEW" value="" class="form-control" disabled />
                     <input type="hidden" name="CATEGORY_NEW_HIDDEN" id="CATEGORY_NEW_HIDDEN" value="" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NO_NEW_HIDDEN" id="CATEGORY_NO_NEW_HIDDEN" value="" class="form-control" />
                 </div>
             </td>
             <td>
-                <input type="text" id="NEW_PARTS_NAME" name="NEW_PARTS_NAME" value="" class="form-control" style="" placeholder="Parts name" >
+                <input type="text" id="NEW_PARTS_NAME" name="NEW_PARTS_NAME" value="" class="form-control input-sm" style="" placeholder="部品名-英数字(正)" >
             </td>
             <td>
-                <input type="number" id="NEW_PARTS_PRICE" name="NEW_PARTS_PRICE" value="" class="form-control" style="" placeholder="Parts price" >
+                <input type="text" id="NEW_PARTS_NAME_JP" name="NEW_PARTS_NAME_JP" value="" class="form-control input-sm" style="" placeholder="部品名-日本語(略)" >
             </td>
             <td>
-                <a href="" class="btn btn-primary" onclick="newParts(); return false;">NEW</a>
+                <input type="number" id="NEW_PARTS_PRICE" name="NEW_PARTS_PRICE" value="" class="form-control input-sm" style="" placeholder="税抜価格" >
+            </td>
+             <td>
+                <input type="number" id="NEW_PARTS_REMARKS" name="NEW_PARTS_REMARKS" value="" class="form-control input-sm" style="" placeholder="備考" >
+            </td>           
+            <td>
+                <a href="" class="btn btn-primary btn-sm" onclick="newParts(); return false;">NEW</a>
             </td>
        </tr>
    </tbody>
